--- a/packages/parser-ng/package.json
+++ b/packages/parser-ng/package.json
@@ -1,11 +1,11 @@
 {
   "name": "parser-ng",
   "version": "1.0.0",
-  "main": "index.js",
   "license": "MIT",
   "main": "dist/index.js",
-  "types":
   "devDependencies": {
+    "@types/moo": "^0.5.5",
+    "moo": "^0.5.2",
     "vite": "^4.0.0",
     "vitest": "^0.25.6"
   }
