--- a/packages/parser-ng/package.json
+++ b/packages/parser-ng/package.json
@@ -8,9 +8,11 @@
   },
   "devDependencies": {
     "@types/moo": "^0.5.5",
+    "@vitest/ui": "^0.25.7",
     "moo": "^0.5.2",
-    "nearley": "^2.20.1",
+    "specification": "../specification",
     "vite": "^4.0.0",
+    "vite-plugin-dts": "^1.7.1",
     "vitest": "^0.25.6"
   }
 }
