fix "test"-error in vite.config by upgrading to viest 0.25.7

--- a/packages/parser-ng/tsconfig.json
+++ b/packages/parser-ng/tsconfig.json
@@ -20,5 +20,6 @@
   "include": [
     "src",
     "./node_modules/vitest/globals.d.ts"
-  ]
+  ],
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
