--- a/packages/parser-ng/package.json
+++ b/packages/parser-ng/package.json
@@ -10,11 +10,11 @@
   "devDependencies": {
     "@types/moo": "^0.5.5",
     "@vitest/ui": "^0.25.7",
-    "specifiation": "../specification",
     "specification": "../specification",
+    "typescript": "^4.9.4",
     "vite": "^4.0.0",
     "vite-plugin-dts": "^1.7.1",
-    "vitest": "^0.25.6"
+    "vitest": "^0.25.7"
   },
   "dependencies": {
     "moo": "^0.5.2"
