--- a/packages/specification/package.json
+++ b/packages/specification/package.json
@@ -11,7 +11,9 @@
   "module": "dist/spec.mjs",
   "main": "dist/spec.js",
   "types": "dist/spec.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "devDependencies": {
     "@vitest/ui": "^0.25.7",
     "globby": "^13.1.2",
@@ -19,7 +21,6 @@
     "prettier": "^2.8.1",
     "typescript": "^4.9.4",
     "vite": "^4.0.0",
-    "vite-dts": "^1.0.4",
     "vite-node": "^0.25.7",
     "vite-plugin-dts": "^1.7.1",
     "vitest": "^0.25.7",
