--- a/packages/specification/tsconfig.json
+++ b/packages/specification/tsconfig.json
@@ -20,5 +20,6 @@
   "include": [
     "src",
     "./node_modules/vitest/globals.d.ts"
-  ]
+  ],
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
