--- a/packages/benchmarks/package.json
+++ b/packages/benchmarks/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "run-suites": "vite-node src/index.ts"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@types/node": "^18.11.13"
+  },
   "devDependencies": {
     "typescript": "^4.9.4",
     "vite-node": "^0.25.6",
