--- a/package.json
+++ b/package.json
@@ -1,22 +1,9 @@
 {
-  "name": "handlebars-ng",
+  "workspaces": [
+    "packages/@handlebars-ng/*"
+  ],
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "dev:spec": "vitest --ui src/spec"
-  },
   "devDependencies": {
-    "@vitest/ui": "^0.25.6",
-    "globby": "^13.1.2",
-    "handlebars": "^4.7.7",
-    "typescript": "^4.6.4",
-    "vite": "^3.2.3",
-    "vitest": "^0.25.6",
-    "yaml": "^2.1.3"
-  },
-  "dependencies": {}
+    "lerna": "^6.1.0"
+  }
 }
