--- a/packages/@handlebars-ng/parser/package.json
+++ b/packages/@handlebars-ng/parser/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "parser-ng",
-  "version": "1.0.0",
+  "name": "@handlebars-ng/parser",
+  "version": "0.0.1",
   "license": "MIT",
   "main": "dist/index.js",
   "scripts": {
@@ -10,13 +10,14 @@
   "devDependencies": {
     "@types/moo": "^0.5.5",
     "@vitest/ui": "^0.25.7",
-    "specification": "../specification",
+    "@handlebars-ng/specification": "0.0.1",
     "typescript": "^4.9.4",
     "vite": "^4.0.0",
     "vite-plugin-dts": "^1.7.1",
     "vitest": "^0.25.7"
   },
   "dependencies": {
-    "moo": "^0.5.2"
+    "moo": "^0.5.2",
+    "specification": "^0.1.0"
   }
 }
