--- a/packages/@handlebars-ng/specification/tsconfig.json
+++ b/packages/@handlebars-ng/specification/tsconfig.json
@@ -19,7 +19,7 @@
   },
   "include": [
     "src",
-    "./node_modules/vitest/globals.d.ts"
+    "../../../node_modules/vitest/globals.d.ts"
   ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
