--- a/package.json
+++ b/package.json
@@ -3,7 +3,24 @@
     "packages/@handlebars-ng/*"
   ],
   "private": true,
+  "scripts": {
+    "lint": "lerna run lint",
+    "format": "lerna run format",
+    "test": "lerna run test",
+    "prepare": "husky install"
+  },
   "devDependencies": {
-    "lerna": "^6.1.0"
+    "@typescript-eslint/eslint-plugin": "^5.46.0",
+    "@typescript-eslint/parser": "^5.46.0",
+    "eslint": "^8.29.0",
+    "husky": ">=7",
+    "lerna": "^6.1.0",
+    "lint-staged": ">=10",
+    "prettier": "^2.8.1",
+    "typescript": "^4.9.4"
+  },
+  "lint-staged": {
+    "*.{js,ts}": "eslint --cache --fix",
+    "*.{js,ts,css,md,yaml}": "prettier --write"
   }
 }
