--- a/packages/@handlebars-ng/benchmarks/package.json
+++ b/packages/@handlebars-ng/benchmarks/package.json
@@ -9,9 +9,11 @@
     "lint": "eslint --fix src/"
   },
   "dependencies": {
+    "@handlebars-ng/parser": "0.0.1",
     "@types/node": "^18.11.13"
   },
   "devDependencies": {
+    "handlebars": "^4.7.7",
     "typescript": "^4.9.4",
     "vite-node": "^0.25.6",
     "vitest": "^0.25.6"
