--- a/packages/@handlebars-ng/specification/src/spec/basic/simple-mustache.hb-spec.yaml
+++ b/packages/@handlebars-ng/specification/src/spec/basic/simple-mustache.hb-spec.yaml
@@ -59,5 +59,5 @@ ast:
     end:
       line: 1
       column: 15
-input: { name: "world" }
-output: "Hello world."
+input: { name: "world < sun" }
+output: "Hello world &lt; sun."
