--- a/packages/@handlebars-ng/runner/package.json
+++ b/packages/@handlebars-ng/runner/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@handlebars-ng/parser",
-  "version": "0.0.1",
+  "name": "@handlebars-ng/runner",
+  "version": "1.0.0",
   "license": "MIT",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -13,14 +13,10 @@
   },
   "devDependencies": {
     "@handlebars-ng/specification": "0.0.1",
-    "@types/moo": "^0.5.5",
-    "@vitest/ui": "^0.25.7",
+    "@vitest/ui": "^0.25.8",
     "typescript": "^4.9.4",
-    "vite": "^4.0.0",
+    "vite": "^4.0.1",
     "vite-plugin-dts": "^1.7.1",
-    "vitest": "^0.25.7"
-  },
-  "dependencies": {
-    "moo": "^0.5.2"
+    "vitest": "^0.25.8"
   }
 }
