--- a/packages/@handlebars-ng/specification/package.json
+++ b/packages/@handlebars-ng/specification/package.json
@@ -3,16 +3,17 @@
   "version": "0.0.1",
   "license": "MIT",
   "scripts": {
-    "test:ui": "vitest --ui",
+    "dev": "vitest --ui",
     "lint": "eslint --fix src/",
     "test": "vitest",
-    "prebuild": "vite-node src/bin/buildSpec.ts",
+    "generate:test-schema": "ts-json-schema-generator --path src/types/HandlebarsTest.ts --type HandlebarsTest > src/spec.schema.json --id http://www.knappi.org/handlebars-ng/test/schema",
+    "generate:spec": "vite-node src/internal/generateSpec.ts",
     "build": "tsc && vite build",
     "format": "prettier -w src"
   },
-  "module": "dist/spec.mjs",
-  "main": "dist/spec.js",
-  "types": "dist/spec.d.ts",
+  "module": "dist/index.mjs",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
@@ -21,6 +22,7 @@
     "globby": "^13.1.2",
     "handlebars": "^4.7.7",
     "prettier": "^2.8.1",
+    "ts-json-schema-generator": "^1.1.2",
     "typescript": "^4.9.4",
     "vite": "^4.0.0",
     "vite-node": "^0.25.7",
