--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -15,5 +15,14 @@
     "@astrojs/tailwind": "^2.1.3",
     "astro": "^1.6.15",
     "tailwindcss": "^3.0.24"
+  },
+  "devDependencies": {
+    "@types/prettier": "^2.7.1",
+    "globby": "^13.1.3",
+    "handlebars": "^4.7.7",
+    "prettier": "^2.8.1",
+    "ts-json-schema-generator": "^1.1.2",
+    "vite": "^4.0.1",
+    "vitest": "^0.25.8"
   }
 }
