--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -4,14 +4,15 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
+    "dev:server": "astro dev",
+    "dev:unit": "vitest --ui",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
     "@astrojs/mdx": "^0.12.2",
+    "@astrojs/prism": "^1.0.2",
     "@astrojs/tailwind": "^2.1.3",
     "astro": "^1.6.15",
     "tailwindcss": "^3.0.24"
