project setup, format files, fix eslint

--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   ],
   "private": true,
   "scripts": {
-    "lint": "lerna run lint",
-    "format": "lerna run format",
+    "lint": "eslint --cache .",
+    "format": "prettier -w .",
     "test": "lerna run test",
+    "dev": "lerna run dev --parallel",
     "prepare": "husky install"
   },
   "devDependencies": {
