--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,8 @@
 {
-    "json.schemas": [
-        
+  "json.schemas": [
     {
-        "fileMatch": [
-            "/**/*.hb.spec.json"
-        ],
-        "url": "./packages/@handlebars-ng/specification/public/schema/draft-00/testcase.json"
+      "fileMatch": ["/**/*.hb.spec.json"],
+      "url": "./packages/@handlebars-ng/specification/public/schema/draft-00/testcase.json"
     }
-    ]
+  ]
 }
