--- a/packages/@handlebars-ng/benchmarks/tsconfig.json
+++ b/packages/@handlebars-ng/benchmarks/tsconfig.json
@@ -3,9 +3,7 @@
     "target": "ESNext",
     "useDefineForClassFields": true,
     "module": "ESNext",
-    "lib": [
-      "ESNext"
-    ],
+    "lib": ["ESNext"],
     "moduleResolution": "Node",
     "strict": true,
     "resolveJsonModule": true,
@@ -17,8 +15,5 @@
     "noImplicitReturns": true,
     "skipLibCheck": true
   },
-  "include": [
-    "src",
-    "../../../node_modules/vitest/globals.d.ts"
-  ]
+  "include": ["src", "../../../node_modules/vitest/globals.d.ts"]
 }
