--- a/packages/@handlebars-ng/parser/tsconfig.json
+++ b/packages/@handlebars-ng/parser/tsconfig.json
@@ -3,9 +3,7 @@
     "target": "ESNext",
     "useDefineForClassFields": true,
     "module": "ESNext",
-    "lib": [
-      "ESNext"
-    ],
+    "lib": ["ESNext"],
     "moduleResolution": "Node",
     "strict": true,
     "resolveJsonModule": true,
@@ -17,9 +15,6 @@
     "noImplicitReturns": true,
     "skipLibCheck": true
   },
-  "include": [
-    "src",
-    "../../../node_modules/vitest/globals.d.ts"
-  ],
+  "include": ["src", "../../../node_modules/vitest/globals.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
