--- a/packages/@handlebars-ng/runner/tsconfig.json
+++ b/packages/@handlebars-ng/runner/tsconfig.json
@@ -3,9 +3,7 @@
     "target": "ESNext",
     "useDefineForClassFields": true,
     "module": "ESNext",
-    "lib": [
-      "ESNext"
-    ],
+    "lib": ["ESNext"],
     "moduleResolution": "Node",
     "strict": true,
     "resolveJsonModule": true,
@@ -19,7 +17,8 @@
   },
   "include": [
     "src",
-    "../../../node_modules/vitest/globals.d.ts"
-, "../specification/src/types/ast.ts"  ],
+    "../../../node_modules/vitest/globals.d.ts",
+    "../specification/src/types/ast.ts"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
