--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   ],
   "private": true,
   "scripts": {
-    "lint": "eslint --cache .",
+    "lint": "eslint .",
     "format": "prettier -w .",
     "test": "lerna run test",
     "dev": "lerna run dev --parallel",
@@ -22,7 +22,7 @@
     "typescript": "^4.9.4"
   },
   "lint-staged": {
-    "*.{js,ts}": "eslint --cache --fix",
+    "*.{js,ts}": "eslint --fix",
     "*.{js,ts,css,md,yaml}": "prettier --write"
   }
 }
