--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   ],
   "private": true,
   "scripts": {
-    "lint": "eslint .",
+    "test:lint": "eslint .",
     "format": "prettier -w .",
-    "test": "lerna run test",
+    "test-and-build": "lerna run test-and-build",
     "dev": "lerna run dev --parallel",
     "prepare": "husky install"
   },
