--- a/packages/@handlebars-ng/parser/package.json
+++ b/packages/@handlebars-ng/parser/package.json
@@ -7,7 +7,9 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "vite build",
-    "test": "vitest --run",
+    "test:unit": "vitest --run",
+    "test:types": "tsc --noEmit",
+    "test-and-build": "yarn test:types && yarn test:unit && yarn build",
     "dev": "concurrently -k npm:dev:*",
     "dev:unit": "vitest --ui",
     "dev:types": "tsc --watch"
