--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -31,7 +31,7 @@ jobs:
     permissions:
       contents: read
       pages: write
-      id-token: read
+      id-token: write
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
