--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -1,5 +1,7 @@
 name: Test, Build and Publish
 on: [push]
+env:
+  WEBSITE_DIR: packages/@handlebars-ng/specification
 jobs:
   test-and-build:
     runs-on: ubuntu-latest
@@ -17,12 +19,16 @@ jobs:
     steps:
       - name: Checkout your repository using git
         uses: actions/checkout@v3
-      - name: Install, build, and upload your site
-        uses: withastro/action@v0
+      - uses: actions/setup-node@v3
         with:
-          path: packages/@handlebars-ng/specification
           node-version: 18
-          package-manager: yarn
+      - run: |
+          cd ${{ WEBSITE_DIR }}
+          yarn
+          yarn build-site
+      - uses: actions/upload-pages-artifact@v1
+        with:
+          path: "${{ WEBSITE_DIR }}/dist/"
 
   deploy-site:
     if: github.ref == 'refs/heads/main'
