--- a/packages/@handlebars-ng/specification/package.json
+++ b/packages/@handlebars-ng/specification/package.json
@@ -15,7 +15,7 @@
     "dev:unit": "vitest --ui",
     "dev": "concurrently -k npm:dev:*",
     "site:preview": "astro preview",
-    "site:build":"astro build",
+    "site:build": "astro build",
     "astro": "astro"
   },
   "files": [
@@ -27,8 +27,12 @@
   "dependencies": {
     "@astrojs/mdx": "^0.12.2",
     "@astrojs/prism": "^1.0.2",
+    "@astrojs/solid-js": "^1.2.3",
     "@astrojs/tailwind": "^2.1.3",
+    "@nanostores/solid": "^0.3.2",
     "astro": "^1.6.15",
+    "nanostores": "^0.7.1",
+    "solid-js": "^1.4.3",
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
