--- a/packages/@handlebars-ng/specification/tsconfig.json
+++ b/packages/@handlebars-ng/specification/tsconfig.json
@@ -4,8 +4,16 @@
     "baseUrl": ".",
     "skipLibCheck": true,
     "paths": {
-      "@/*": ["src/*"]
-    }
+      "@/*": [
+        "src/*"
+      ]
+    },
+    "jsx": "preserve",
+    "jsxImportSource": "solid-js"
   },
-  "include": ["src/**/*", "scripts/**/*", "types/*"]
+  "include": [
+    "src/**/*",
+    "scripts/**/*",
+    "types/*"
+  ]
 }
