move website to its own module

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "workspaces": [
-    "packages/@handlebars-ng/*"
+    "packages/@handlebars-ng/*",
+    "packages/handlebars-ng.knappi.org"
   ],
   "license": "MIT",
   "private": true,
