--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -1,7 +1,7 @@
 name: Test, Build and Publish
 on: [push]
 env:
-  WEBSITE_DIR: packages/@handlebars-ng/specification
+  WEBSITE_DIR: packages/handlebars-ng.knappi.org
 jobs:
   test-and-build:
     runs-on: ubuntu-latest
@@ -12,21 +12,8 @@ jobs:
           node-version: 18
       - run: yarn
       - run: yarn test-and-build
-
-  build-site:
-    runs-on: ubuntu-latest
-    needs: test-and-build
-    steps:
-      - name: Checkout your repository using git
-        uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-      - run: |
-          cd ${{ env.WEBSITE_DIR }}
-          yarn
-          yarn site:build
-      - uses: actions/upload-pages-artifact@v1
+      - name: "Upload website as artifact"
+        uses: actions/upload-pages-artifact@v1
         with:
           path: "${{ env.WEBSITE_DIR }}/dist/"
 
