--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier -w .",
     "test-and-build": "lerna run test-and-build",
     "dev": "lerna run dev --parallel",
+    "dev:site": "cd packages/handlebars-ng.knappi.org && yarn dev:server",
     "prepare": "husky install"
   },
   "devDependencies": {
