--- a/packages/@handlebars-ng/parser/package.json
+++ b/packages/@handlebars-ng/parser/package.json
@@ -6,6 +6,7 @@
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "scripts": {
+    "perf": "vite-node src/performance-test.ts",
     "build": "vite build",
     "test:unit": "vitest --run",
     "test:types": "tsc --noEmit",
@@ -15,11 +16,13 @@
     "dev:types": "tsc --watch"
   },
   "devDependencies": {
+    "@handlebars-ng/benchmarks": "0.0.1",
     "@handlebars-ng/specification": "0.0.1",
     "@types/moo": "^0.5.5",
     "@vitest/ui": "^0.25.7",
     "typescript": "^4.9.4",
     "vite": "^4.0.0",
+    "vite-node": "^0.26.3",
     "vite-plugin-dts": "^1.7.1",
     "vitest": "^0.25.7"
   },
