--- a/packages/handlebars-ng.knappi.org/package.json
+++ b/packages/handlebars-ng.knappi.org/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "test:types": "tsc --noEmit",
     "generate:perf": "vite-node scripts/generate-benchmarks.ts",
-    "prebuild": "VITE_FORCE=true yarn generate:perf",
+    "generate": "concurrently -k npm:generate:*",
     "build": "astro build",
-    "test-and-build": "yarn test:types && yarn build",
+    "test-and-build": "VITE_FORCE=true yarn generate && yarn test:types && yarn build",
     "dev:server": "yarn generate:perf && astro dev",
     "dev:unit": "vitest --ui",
     "dev": "concurrently -k npm:dev:*",
