--- a/packages/@handlebars-ng/specification/tsconfig.json
+++ b/packages/@handlebars-ng/specification/tsconfig.json
@@ -4,9 +4,7 @@
     "baseUrl": ".",
     "skipLibCheck": true,
     "paths": {
-      "@/*": [
-        "src/*"
-      ],
+      "@/*": ["src/*"],
       "handlebars": ["types/handlebars"]
     },
     "jsx": "preserve",
@@ -15,6 +13,8 @@
   "include": [
     "src/**/*",
     "scripts/**/*",
-    "types/*"
-, "types/handlebars/originalAst.d.ts", "types/handlebars/originalAst.d.ts"  ]
+    "types/*",
+    "types/handlebars/originalAst.d.ts",
+    "types/handlebars/originalAst.d.ts"
+  ]
 }
