--- a/packages/@handlebars-ng/specification/package.json
+++ b/packages/@handlebars-ng/specification/package.json
@@ -9,8 +9,8 @@
     "build": "vite-node scripts/build-testcases.ts",
     "test-and-build": "yarn test:unit && yarn build && yarn test:types",
     "generate": "concurrently npm:generate:*",
-    "generate:ast-schema": "scripts/create-json-schema.sh types/ast.d.ts Program src/pages/spec/schema/ast.json",
-    "generate:spec-schema": "scripts/create-json-schema.sh types/tests.d.ts HandlebarsTest src/pages/spec/schema/testcase.json",
+    "generate:ast-schema": "scripts/create-json-schema.sh types/ast.d.ts Program src/spec/schema/ast.json",
+    "generate:spec-schema": "scripts/create-json-schema.sh types/tests.d.ts HandlebarsTest src/spec/schema/testcase.json",
     "dev:unit": "vitest --ui",
     "dev": "concurrently -k npm:dev:*",
     "auto-complete-tests": "vite-node scripts/add-results-to-tests.ts"
@@ -22,6 +22,7 @@
     "tests.mjs"
   ],
   "devDependencies": {
+    "@handlebars/parser": "2.1.0",
     "@vitest/ui": "^0.25.7",
     "concurrently": "^7.6.0",
     "globby": "^13.1.3",
