--- a/packages/handlebars-ng.knappi.org/package.json
+++ b/packages/handlebars-ng.knappi.org/package.json
@@ -34,6 +34,7 @@
     "@nanostores/solid": "^0.3.2",
     "astro": "^1.6.15",
     "nanostores": "^0.7.1",
+    "prettier": "^2.8.1",
     "solid-js": "^1.4.3",
     "tailwindcss": "^3.0.24"
   },
