--- a/packages/handlebars-ng.knappi.org/tsconfig.json
+++ b/packages/handlebars-ng.knappi.org/tsconfig.json
@@ -9,7 +9,8 @@
       ]
     },
     "jsx": "preserve",
-    "jsxImportSource": "solid-js"
+    "jsxImportSource": "solid-js",
+    "types": ["vite/client"] 
   },
   "include": [
     "src/**/*",
