--- a/packages/handlebars-ng.knappi.org/package.json
+++ b/packages/handlebars-ng.knappi.org/package.json
@@ -11,6 +11,7 @@
     "test-and-build": "VITE_FORCE=true yarn generate && yarn test:types && yarn build",
     "dev:server": "yarn generate:perf && astro dev",
     "dev:types": "tsc --noEmit --watch",
+    "dev:unit": "vitest --ui",
     "dev": "concurrently -k npm:dev:*",
     "preview": "astro preview",
     "astro": "astro"
@@ -33,6 +34,7 @@
     "@handlebars-ng/specification": "0.0.1",
     "@nanostores/solid": "^0.3.2",
     "astro": "^1.6.15",
+    "astro-heroicons": "^0.3.0",
     "nanostores": "^0.7.1",
     "prettier": "^2.8.1",
     "solid-js": "^1.4.3",
@@ -43,18 +45,23 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@types/prettier": "^2.7.1",
     "@vitest/ui": "^0.25.7",
+    "astro-icon": "^0.8.0",
     "chokidar": "^3.5.3",
     "concurrently": "^7.6.0",
     "del": "^7.0.0",
     "globby": "^13.1.3",
     "handlebars": "^4.7.7",
+    "heroicons": "^2.0.13",
     "json-schema-to-typescript": "^11.0.2",
     "make-dir": "^3.1.0",
     "prettier": "^2.8.1",
+    "rehype-autolink-headings": "^6.1.1",
+    "sass": "^1.57.1",
     "ts-json-schema-generator": "^1.1.2",
     "typescript": "^4.9.4",
     "vite": "^4.0.1",
     "vite-node": "^0.26.3",
-    "vite-plugin-dts": "^1.7.1"
+    "vite-plugin-dts": "^1.7.1",
+    "vitest": "^0.26.3"
   }
 }
