--- a/packages/handlebars-ng.knappi.org/package.json
+++ b/packages/handlebars-ng.knappi.org/package.json
@@ -46,6 +46,7 @@
     "@types/prettier": "^2.7.1",
     "@vitest/ui": "^0.25.7",
     "astro-icon": "^0.8.0",
+    "chart.js": "^4.1.2",
     "chokidar": "^3.5.3",
     "concurrently": "^7.6.0",
     "del": "^7.0.0",
