--- a/packages/@handlebars-ng/benchmarks/package.json
+++ b/packages/@handlebars-ng/benchmarks/package.json
@@ -19,6 +19,7 @@
     "react-native-performance": "^4.0.0"
   },
   "devDependencies": {
+    "tinybench": "^2.3.1",
     "typescript": "^4.9.4",
     "vitest": "^0.25.6"
   }
