--- a/packages/@handlebars-ng/benchmarks/tsconfig.json
+++ b/packages/@handlebars-ng/benchmarks/tsconfig.json
@@ -11,7 +11,7 @@
     "isolatedModules": true,
     "esModuleInterop": true,
     "noEmit": true,
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noImplicitReturns": true,
     "skipLibCheck": true,
