--- a/packages/@handlebars-ng/specification/package.json
+++ b/packages/@handlebars-ng/specification/package.json
@@ -28,6 +28,7 @@
     "globby": "^13.1.3",
     "handlebars": "^4.7.7",
     "json-schema-to-typescript": "^11.0.2",
+    "jsonschema": "^1.4.1",
     "prettier": "^2.8.1",
     "ts-json-schema-generator": "^1.1.2",
     "typescript": "^4.9.4",
