--- a/packages/@handlebars-ng/runner/package.json
+++ b/packages/@handlebars-ng/runner/package.json
@@ -22,7 +22,7 @@
     "typescript": "^4.9.4",
     "vite": "^4.0.1",
     "vite-plugin-dts": "^1.7.1",
-    "vitest": "^0.25.8"
+    "vitest": "0.27.1"
   },
   "dependencies": {
     "@handlebars-ng/benchmarks": "0.0.1",
