--- a/packages/@handlebars-ng/runner/package.json
+++ b/packages/@handlebars-ng/runner/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@handlebars-ng/specification": "0.0.1",
     "@vitest/ui": "^0.25.8",
+    "assemblyscript": "^0.26.3",
     "typescript": "^4.9.4",
     "vite": "^4.0.1",
     "vite-plugin-dts": "^1.7.1",
