--- a/packages/@handlebars-ng/runner/package.json
+++ b/packages/@handlebars-ng/runner/package.json
@@ -20,6 +20,7 @@
     "@handlebars-ng/specification": "0.0.1",
     "@vitest/ui": "^0.25.8",
     "assemblyscript": "^0.26.3",
+    "handlebars": "^4.7.7",
     "typescript": "^4.9.4",
     "vite": "^4.0.1",
     "vite-plugin-dts": "^1.7.1",
