--- a/packages/handlebars-ng.knappi.org/package.json
+++ b/packages/handlebars-ng.knappi.org/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "scripts": {
     "test:types": "tsc --noEmit",
+    "test:lint": "eslint .",
     "generate:perf": "vite-node scripts/generate-benchmarks.ts",
     "generate": "concurrently -k npm:generate:*",
     "build": "astro build",
