--- a/packages/@handlebars-ng/benchmarks/package.json
+++ b/packages/@handlebars-ng/benchmarks/package.json
@@ -16,14 +16,13 @@
   },
   "dependencies": {
     "handlebars": "4.7.7",
-    "isomorphic-performance": "4.0.0",
-    "react-native-performance": "4.0.0",
     "tinybench": "2.3.1"
   },
   "devDependencies": {
     "@handlebars-ng/common-dev": "0.0.1",
     "@handlebars-ng/eslint-plugin": "0.0.1",
     "typescript": "4.9.4",
+    "vite": "4.0.4",
     "vitest": "0.28.3"
   }
 }
