canonical build scripts, apply prettier

--- a/package.json
+++ b/package.json
@@ -6,18 +6,23 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "format": "prettier -w .",
-    "lint": "eslint .",
-    "build": "lerna run build",
-    "dep-versions": "node ./scripts/require-same-dependency-versions.mjs",
-    "test": "lerna run test",
-    "test-and-build": "yarn dep-versions && yarn build && yarn test",
-    "dev": "lerna run dev --parallel",
-    "dev:site": "cd packages/handlebars-ng.knappi.org && yarn dev:server",
-    "preview:site": "cd packages/handlebars-ng.knappi.org && yarn preview",
+    "format": "prettier --write .",
+    "test:lint": "eslint .",
+    "test:format": "prettier --check .",
+    "dep-versions": "node ./scripts/check-dep-versions.mjs",
+    "---- workflows ----": "",
+    "clean": "lerna run clean --parallel",
+    "test-and-build": "yarn dep-versions && yarn test:lint && yarn test:format && lerna run test-and-build",
+    "build:watch": "lerna run build:watch --parallel",
+    "---- development ---- ": "",
+    "runner": "lerna run --scope @handlebars-ng/runner",
+    "parser": "lerna run --scope @handlebars-ng/parser",
+    "benchmarks": "lerna run --scope @handlebars-ng/benchmarks",
+    "spec": "lerna run --scope @handlebars-ng/specification",
+    "site": "lerna run --scope handlebars-ng.knappi.org",
+    "---- chores ----": "",
     "prepare": "husky install",
-    "deps": "yarn upgrade-interactive",
-    "clean": "lerna run clean --parallel"
+    "deps": "yarn upgrade-interactive"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "5.49.0",
