--- a/packages/@handlebars-ng/specification/package.json
+++ b/packages/@handlebars-ng/specification/package.json
@@ -15,19 +15,20 @@
   },
   "scripts": {
     "build": "vite build",
-    "test": "concurrently -m 1 npm:test:*",
-    "test:lint": "eslint .",
-    "test:unit": "vitest --run",
-    "test:types": "tsc --noEmit",
-    "test-and-build": "yarn test && yarn build",
-    "generate": "concurrently npm:generate:*",
-    "generate:ast-schema": "scripts/create-json-schema.sh types/ast.d.ts Program src/spec/schema/ast.json",
-    "generate:spec-schema": "scripts/create-json-schema.sh types/tests.d.ts HandlebarsTest src/spec/schema/testcase.json",
-    "generate:invalid-id-tests": "vite-node scripts/generate-invalid-id-tests.ts",
+    "dev": "concurrently -k npm:dev:*",
     "dev:unit": "vitest --ui",
     "dev:types": "tsc --noEmit --watch",
-    "dev": "concurrently -k npm:dev:*",
-    "auto-complete-tests": "vite-node scripts/add-results-to-tests.ts",
+    "generate": "concurrently npm:generate:*",
+    "generate:ast-schema": "scripts/create-json-schema.sh src/types/ast.d.ts Program src/spec/schema/ast.json",
+    "generate:spec-schema": "scripts/create-json-schema.sh src/types/tests.d.ts HandlebarsTest src/spec/schema/testcase.json",
+    "generate:invalid-id-tests": "vite-node scripts/generate-invalid-id-tests.ts",
+    "generate:auto-complete-tests": "vite-node scripts/add-results-to-tests.ts",
+    "test": "concurrently --kill-others-on-fail npm:test:*",
+    "test:unit": "vitest --run",
+    "test:types": "tsc --build",
+    "---- lerna tasks ----": "",
+    "build:watch": "vite build --watch",
+    "test-and-build": "yarn test && yarn build",
     "clean": "rm dist -rf"
   },
   "files": [
