--- a/packages/handlebars-ng.knappi.org/package.json
+++ b/packages/handlebars-ng.knappi.org/package.json
@@ -4,18 +4,21 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "test:types": "tsc --noEmit",
-    "test:lint": "eslint .",
+    "build": "VITE_FORCE=true yarn generate && astro build",
     "generate:perf": "vite-node scripts/generate-benchmarks.ts",
     "generate": "concurrently -k npm:generate:*",
-    "build": "astro build",
-    "test-and-build": "VITE_FORCE=true yarn generate && yarn test:types && yarn build",
-    "dev:server": "yarn generate:perf && astro dev",
-    "dev:types": "tsc --noEmit --watch",
-    "dev:unit": "vitest --ui",
     "dev": "concurrently -k npm:dev:*",
+    "dev:server": "yarn generate:perf && astro dev",
+    "dev:types": "tsc --build tsconfig.json --noEmit --watch",
+    "dev:unit": "vitest --ui",
+    "test": "concurrently -m 1 npm:test:*",
+    "test:types": "tsc --build",
+    "test:unit": "vitest --run",
     "preview": "astro preview",
     "astro": "astro",
+    "---- lerna tasks ----": "",
+    "build:watch": "vite build --watch",
+    "test-and-build": "concurrently -m 1 --kill-others-on-fail npm:test:* npm:build",
     "clean": "rm dist -rf"
   },
   "files": [
@@ -31,6 +34,7 @@
     "@astrojs/solid-js": "2.0.0",
     "@astrojs/tailwind": "3.0.0",
     "@handlebars-ng/benchmarks": "0.0.1",
+    "@handlebars-ng/common-dev": "0.0.1",
     "@handlebars-ng/parser": "0.0.1",
     "@handlebars-ng/runner": "0.0.1",
     "@handlebars-ng/specification": "0.0.1",
