--- a/packages/@handlebars-ng/abstract-syntax-tree/package.json
+++ b/packages/@handlebars-ng/abstract-syntax-tree/package.json
@@ -2,8 +2,5 @@
   "name": "@handlebars-ng/abstract-syntax-tree",
   "version": "0.0.1",
   "license": "MIT",
-  "types": "index.d.ts",
-  "scripts": {
-    "test:lint": "eslint ."
-  }
+  "types": "index.d.ts"
 }
