--- a/packages/@handlebars-ng/specification/tsconfig.node.json
+++ b/packages/@handlebars-ng/specification/tsconfig.node.json
@@ -1,4 +1,7 @@
 {
   "extends": "../common-dev/tsconfigs/node.json",
-  "include": ["vite.config.ts"]
+  "include": ["vite.config.ts"],
+  "compilerOptions": {
+    "outDir": "./dist-node"
+  }
 }
