--- a/packages/handlebars-ng.knappi.org/tsconfig.json
+++ b/packages/handlebars-ng.knappi.org/tsconfig.json
@@ -4,17 +4,12 @@
     "baseUrl": ".",
     "skipLibCheck": true,
     "paths": {
-      "@/*": [
-        "src/*"
-      ]
+      "@/*": ["src/*"]
     },
     "jsx": "preserve",
     "jsxImportSource": "solid-js",
-    "types": ["vite/client"] 
+    "types": ["vite/client"]
   },
-  "include": [
-    "src/**/*",
-    "scripts/**/*",
-    "types/*"
-  ]
+  "include": ["src/**/*"],
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
