--- a/packages/@handlebars-ng/benchmarks/package.json
+++ b/packages/@handlebars-ng/benchmarks/package.json
@@ -17,7 +17,7 @@
     "---- lerna tasks ----": "",
     "build:watch": "vite build --watch",
     "test-and-build": "yarn test && yarn build",
-    "clean": "rm dist -rf"
+    "clean": "rm dist dist-node -rf"
   },
   "dependencies": {
     "handlebars": "4.7.7",
