--- a/packages/@handlebars-ng/runner/package.json
+++ b/packages/@handlebars-ng/runner/package.json
@@ -26,7 +26,7 @@
     "---- lerna tasks ----": "",
     "build:watch": "vite build --watch",
     "test-and-build": "yarn test && yarn build",
-    "clean": "rm dist -rf"
+    "clean": "rm dist dist-node -rf"
   },
   "devDependencies": {
     "@handlebars-ng/eslint-plugin": "0.0.1",
