--- a/packages/handlebars-ng.knappi.org/package.json
+++ b/packages/handlebars-ng.knappi.org/package.json
@@ -9,7 +9,7 @@
     "generate": "concurrently -k npm:generate:*",
     "dev": "concurrently -k npm:dev:*",
     "dev:server": "yarn generate:perf && astro dev",
-    "dev:types": "tsc --build tsconfig.json --noEmit --watch",
+    "dev:types": "tsc --build --watch",
     "dev:unit": "vitest --ui",
     "test": "concurrently -m 1 npm:test:*",
     "test:types": "tsc --build",
@@ -62,6 +62,7 @@
     "make-dir": "3.1.0",
     "prettier": "2.8.3",
     "rehype-autolink-headings": "6.1.1",
+    "rehype-slug": "^5.1.0",
     "sass": "1.57.1",
     "ts-json-schema-generator": "1.2.0",
     "typescript": "4.9.4",
