--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "typescript": "4.9.4"
   },
   "lint-staged": {
-    "*.{js,ts,tsx}": "eslint --fix",
-    "*.{js,ts,css,mdx,md,yaml}": "prettier --write"
+    "*.{js,ts,tsx,mjs,cjs}": "eslint --fix",
+    "*.{js,ts,css,mdx,md,yaml,astro,mjs,cjs}": "prettier --write"
   }
 }
