--- a/package.json
+++ b/package.json
@@ -39,6 +39,6 @@
   },
   "lint-staged": {
     "*.{js,ts,tsx,mjs,cjs}": "eslint --fix",
-    "*.{js,ts,css,mdx,md,yaml,astro,mjs,cjs}": "prettier --write"
+    "*.{js,ts,css,mdx,md,yaml,astro,mjs,cjs,json}": "prettier --write"
   }
 }
