--- a/packages/@handlebars-ng/specification/package.json
+++ b/packages/@handlebars-ng/specification/package.json
@@ -24,6 +24,7 @@
     "generate:invalid-id-tests": "vite-node scripts/generate-invalid-id-tests.ts",
     "generate:auto-complete-tests": "vite-node scripts/add-results-to-tests.ts",
     "test": "concurrently --kill-others-on-fail npm:test:*",
+    "test:grammar": "grammarkdown --noEmit src/spec/handlebars.grammar",
     "test:unit": "vitest --run",
     "test:types": "tsc --build",
     "---- lerna tasks ----": "",
@@ -38,12 +39,13 @@
     "tests.mjs"
   ],
   "devDependencies": {
-    "@handlebars-ng/eslint-plugin": "0.0.1",
     "@handlebars-ng/common-dev": "0.0.1",
+    "@handlebars-ng/eslint-plugin": "0.0.1",
     "@handlebars/parser": "2.1.0",
     "@vitest/ui": "0.28.3",
     "concurrently": "7.6.0",
     "globby": "13.1.3",
+    "grammarkdown": "^3.2.0",
     "handlebars": "4.7.7",
     "json-schema-to-typescript": "11.0.3",
     "jsonschema": "1.4.1",
