--- a/packages/handlebars-ng.knappi.org/package.json
+++ b/packages/handlebars-ng.knappi.org/package.json
@@ -56,6 +56,7 @@
     "concurrently": "7.6.0",
     "del": "7.0.0",
     "globby": "13.1.3",
+    "grammarkdown": "^3.2.0",
     "handlebars": "4.7.7",
     "heroicons": "2.0.14",
     "json-schema-to-typescript": "11.0.3",
