refactor test-case inline

--- a/packages/handlebars-ng.knappi.org/package.json
+++ b/packages/handlebars-ng.knappi.org/package.json
@@ -49,6 +49,7 @@
     "@solidjs/testing-library": "0.6.0",
     "@testing-library/jest-dom": "5.16.5",
     "@types/prettier": "2.7.2",
+    "@types/unist": "^2.0.6",
     "@vitest/ui": "0.28.3",
     "astro-icon": "0.8.0",
     "chart.js": "4.2.0",
@@ -64,9 +65,15 @@
     "prettier": "2.8.3",
     "rehype-autolink-headings": "6.1.1",
     "rehype-slug": "^5.1.0",
+    "remark-mdx": "^2.3.0",
+    "remark-parse": "^10.0.1",
     "sass": "1.57.1",
     "ts-json-schema-generator": "1.2.0",
     "typescript": "4.9.4",
+    "unified": "^10.1.2",
+    "unist": "^8.0.11",
+    "unist-util-inspect": "^7.0.2",
+    "unist-util-visit": "^4.1.2",
     "vite": "4.0.4",
     "vite-node": "0.28.3",
     "vite-plugin-dts": "1.7.1",
