--- a/packages/@handlebars-ng/parser/package.json
+++ b/packages/@handlebars-ng/parser/package.json
@@ -41,7 +41,5 @@
     "vite-plugin-dts": "1.7.1",
     "vitest": "0.28.3"
   },
-  "dependencies": {
-    "moo": "0.5.2"
-  }
+  "dependencies": {}
 }
