--- a/package.json
+++ b/package.json
@@ -25,17 +25,18 @@
     "deps": "yarn upgrade-interactive --latest"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "5.56.0",
-    "@typescript-eslint/parser": "5.56.0",
-    "concurrently": "7.6.0",
-    "eslint": "8.36.0",
+    "@typescript-eslint/eslint-plugin": "5.59.0",
+    "@typescript-eslint/parser": "5.59.0",
+    "concurrently": "8.0.1",
+    "eslint": "8.38.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-import": "2.27.5",
+    "globby": "13.1.4",
     "husky": "8.0.3",
-    "lerna": "6.5.1",
-    "lint-staged": "13.2.0",
-    "prettier": "2.8.6",
-    "typescript": "5.0.2"
+    "lerna": "6.6.1",
+    "lint-staged": "13.2.1",
+    "prettier": "2.8.7",
+    "typescript": "5.0.4"
   },
   "lint-staged": {
     "*.{js,ts,tsx,mjs,cjs}": "eslint --fix",
