--- a/packages/@handlebars-ng/eslint-plugin/package.json
+++ b/packages/@handlebars-ng/eslint-plugin/package.json
@@ -5,10 +5,11 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "5.56.0",
-    "@typescript-eslint/parser": "5.56.0",
+    "@typescript-eslint/eslint-plugin": "5.59.0",
+    "@typescript-eslint/parser": "5.59.0",
     "eslint-config-prettier": "8.8.0",
-    "eslint-plugin-import": "2.27.5"
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-vitest": "^0.1.4"
   },
   "devDependencies": {}
 }
