refactor(parser): plugin architecture
The parser now consists of a core and one
plugin for each statement and expression.
Rules and parsers for each statement and
expression are now in one place and can
more easily be added.

--- a/packages/@handlebars-ng/parser/package.json
+++ b/packages/@handlebars-ng/parser/package.json
@@ -20,7 +20,7 @@
     "test:unit": "vitest --run",
     "test:types": "tsc --build",
     "dev": "concurrently -k npm:dev:*",
-    "dev:unit": "vitest --ui",
+    "dev:unit": "vitest --ui src/ scripts/",
     "dev:types": "tsc --watch",
     "dev:build": "vite build --watch",
     "---- lerna tasks ----": "",
