--- a/packages/handlebars-ng.knappi.org/package.json
+++ b/packages/handlebars-ng.knappi.org/package.json
@@ -36,6 +36,7 @@
     "@handlebars-ng/benchmarks": "0.0.1",
     "@handlebars-ng/common-dev": "0.0.1",
     "@handlebars-ng/parser": "0.0.1",
+    "@handlebars-ng/playground": "0.0.1",
     "@handlebars-ng/runner": "0.0.1",
     "@handlebars-ng/specification": "0.0.1",
     "@nanostores/solid": "0.4.2",
