run prettier on "tsx" and "html" files

--- a/package.json
+++ b/package.json
@@ -41,6 +41,6 @@
   },
   "lint-staged": {
     "*.{js,ts,tsx,mjs,cjs}": "eslint --fix",
-    "*.{js,ts,css,mdx,md,yaml,astro,mjs,cjs,json}": "prettier --write"
+    "*.{js,ts,tsx,css,mdx,md,yaml,astro,mjs,cjs,json,html}": "prettier --write"
   }
 }
