--- a/packages/@handlebars-ng/playground/package.json
+++ b/packages/@handlebars-ng/playground/package.json
@@ -35,8 +35,8 @@
     "@solidjs/testing-library": "0.7.1",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/user-event": "^14.4.3",
-    "@types/codemirror": "^5.60.7",
-    "@vitest/web-worker": "^0.31.1",
+    "@types/codemirror": "5.60.7",
+    "@vitest/web-worker": "0.31.1",
     "autoprefixer": "10.4.14",
     "concurrently": "8.0.1",
     "jsdom": "22.1.0",
@@ -53,8 +53,10 @@
     "@handlebars-ng/runner": "0.0.1",
     "@handlebars-ng/specification": "0.0.1",
     "codemirror": "5.65.13",
-    "comlink": "^4.4.1",
+    "comlink": "4.4.1",
     "handlebars": "4.7.7",
+    "json5": "^2.2.3",
+    "prettier": "2.8.8",
     "solid-js": "1.7.5"
   }
 }
